--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,11 @@
         <!-- endbuild -->
 </head>
     <body>
+        
+        <script type="text/javascript">
+            var STATIC_URL = '../';
+            var SERVER_URL = 'https://nerdeez-server-dev.herokuapp.com/';
+        </script>  
 
         <!-- build:js scripts/components.js -->
         <script src="bower_components/jquery/jquery.js"></script>
@@ -17,11 +22,6 @@
         <script src="bower_components/ember-data-shim/ember-data.js"></script>
         <!-- endbuild -->
 
-        <!--
-        Nerdeez
-        -->
-        <script src="nerdeez-ember/porthole.js"></script>
-        <script src="nerdeez-ember/wormhole.js"></script>
 
         <!-- build:js(.tmp) scripts/templates.js -->
         <script src="scripts/compiled-templates.js"></script>
